--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h1 id="pos-result"></h1>
 
     <button disabled>Testar API (GET)</button>
-    <button onclick="testarPOST()">Testar API (post)</button>
+    <button onclick="testarPOST()">jogar (post)</button>
 </body>
 </html>
 
